--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,103 +3,94 @@ services:
 
   mongors1n1:
     container_name: mongors1n1
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     command: mongod --noprealloc --smallfiles --replSet mongors1 --dbpath /data/db --nojournal --oplogSize 16 --noauth
     environment:
       TERM: xterm
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ${DATA_DIR}/mongors1n1:/data/db
+      - /tmp/mongors1n1:/data/db
 
   mongors1n2:
     container_name: mongors1n2
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     command: mongod --noprealloc --smallfiles --replSet mongors1 --dbpath /data/db --nojournal --oplogSize 16 --noauth
     environment:
       TERM: xterm
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ${DATA_DIR}/mongors1n2:/data/db
+      - /tmp/mongors1n2:/data/db
 
   mongors1n3:
     container_name: mongors1n3
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     command: mongod --noprealloc --smallfiles --replSet mongors1 --dbpath /data/db --nojournal --oplogSize 16 --noauth
     environment:
       TERM: xterm
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ${DATA_DIR}/mongors1n3:/data/db
+      - /tmp/mongors1n3:/data/db
 
   mongors2n1:
     container_name: mongors2n1
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     command: mongod --noprealloc --smallfiles --replSet mongors2 --dbpath /data/db --nojournal --oplogSize 16 --noauth
     environment:
       TERM: xterm
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ${DATA_DIR}/mongors2n1:/data/db
+      - /tmp/mongors2n1:/data/db
 
   mongors2n2:
     container_name: mongors2n2
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     command: mongod --noprealloc --smallfiles --replSet mongors2 --dbpath /data/db --nojournal --oplogSize 16 --noauth
     environment:
       TERM: xterm
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ${DATA_DIR}/mongors2n2:/data/db
+      - /tmp/mongors2n2:/data/db
 
   mongors2n3:
     container_name: mongors2n3
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     command: mongod --noprealloc --smallfiles --replSet mongors2 --dbpath /data/db --nojournal --oplogSize 16 --noauth
     environment:
       TERM: xterm
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ${DATA_DIR}/mongors2n3:/data/db
+      - /tmp/mongors2n3:/data/db
 
   mongocfg1:
     container_name: mongocfg1
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     command: mongod --noprealloc --smallfiles --dbpath /data/db --configsvr --noauth --port 27017
     environment:
       TERM: xterm
     expose:
          - "27017"
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ${DATA_DIR}/mongocfg1:/data/db
+      - /tmp/mongocfg1:/data/db
 
   mongocfg2:
     container_name: mongocfg2
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     command: mongod --noprealloc --smallfiles --dbpath /data/db --configsvr --noauth --port 27017
     environment:
       TERM: xterm
     expose:
          - "27017"
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ${DATA_DIR}/mongocfg2:/data/db
+      - /tmp/mongocfg2:/data/db
 
   mongocfg3:
     container_name: mongocfg3
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     command: mongod --noprealloc --smallfiles --dbpath /data/db --configsvr --noauth --port 27017
     environment:
       TERM: xterm
     expose:
          - "27017"
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ${DATA_DIR}/mongocfg3:/data/db
+      - /tmp/mongocfg3:/data/db
 
   mongos1:
     container_name: mongos1
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     depends_on:
       - mongocfg1
       - mongocfg2
@@ -107,12 +98,10 @@ services:
     command: mongos --configdb mongocfg1:27017,mongocfg2:27017,mongocfg3:27017 --port 27017
     ports:
       - 27017:27017
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
 
   mongos2:
     container_name: mongos2
-    image: mongo:3.0.14
+    image: mongo:3.2-jessie
     depends_on:
       - mongocfg1
       - mongocfg2
@@ -120,6 +109,3 @@ services:
     command: mongos --configdb mongocfg1:27017,mongocfg2:27017,mongocfg3:27017 --port 27017
     ports:
       - 27018:27017
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-
